  * bin/launchpad-crash-digger: Check the release of a bug and whether we have
    a chroot for it before untagging it. This avoids loosing tags for bugs we
    do not yet have a working retracer chroot for.
  * bin/apport-retrace: Do not abort with an exception if package installation
    fails. Give a proper error message instead and point to -u. (LP: #115681)

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 24 May 2007 09:37:43 +0200

apport (0.80) gutsy; urgency=low

  Collect all Launchpad specific bits in a separate class and provide an
  abstract base class. This will greatly help for getting upstream acceptance
  and the possibility of automatically forwarding crashes upstream
  (apport-for-upstreams specification):

  * Add apport/crashdb.py: Abstract crash database interface. This also offers
    a factory function get_crashdb() which reads a configuration file to find
    the default crash database to be used.
  * Add ./crashdb.conf: Crash database configuration file, for Ubuntu on
    Launchpad. Modify setup.py and debian/python-apport.install to ship it in
    python-apport.
  * Add apport/crashdb_impl/memory.py: Simple in-memory implementation of
    crash database interface for testing.
  * Add apport/crashdb_impl/launchpad.py: Launchpad implementation of crash
    database interface.
  * apport/ui.py: Drop LP specific bits and move towards new CrashDatabase
    interface.
  * apport/ui.py, test suite: Do not overwrite file_report() any more, but
    use the memory CrashDatabase. This will test the actual file_report()
    implementation and allows the test suite to check the precise value of
    opened URLs.
  * apport/{report,ui}.py: Move UserInterface.create_crash_bug_title() and its
    test cases to Report.standard_title(). It is much more appropriate there
    and can be used in the retracer as well.
  * bin/apport-retrace: Drop LP specific bits and move to CrashDatabase
    interface. Remove the --remove-tag option, we really should not have it